# sbomfuzz-fuzzomatic-eval

./: .gitignore  SETUP_INSTRUCTIONS.md  extract_harnesses.py  refactor_all_batches.py  run_all_fuzz.py
crate_batch_1/: .fuzzomatic_results.json  Cargo.toml  crate_batch_1.cdx.json
crate_batch_1/fuzz/: Cargo.toml
crate_batch_1/fuzz/fuzz_targets/: Arbitrary.rs  Arbitrary_1.rs  alloy_json_abi_abi_JsonAbi_parse_fuzz.rs  bcrypt_verify_fuzz.rs  bincode_config_Configuration_standard_fuzz.rs  bincode_decode_from_slice_fuzz.rs  bson_decoder_decode_document_fuzz.rs  bson_document_from_reader_fuzz.rs  chrono_datetime_DateTime_checked_add_days_fuzz.rs  chrono_datetime_parse_from_rfc2822_fuzz.rs  cookie_jar_signed_mut_fuzz.rs  cranelift_reader_parser_parse_test_fuzz.rs  csscolorparser_parser_parse_fuzz.rs  cssparser_parser_next_including_whitespace_and_comments_fuzz.rs  cursive_cursive_runnable_run_fuzz.rs  der_decoder_Decoder_new_fuzz.rs  der_parser_der_parse_der_fuzz.rs  exmex_parse_with_default_ops_fuzz.rs  fatfs_fs_FileSystem_new_fuzz.rs  fatfs_fs_FsOptions_new_fuzz.rs  flac_stream_Stream_from_buffer_fuzz.rs  flac_stream_Stream_info_fuzz.rs  flac_stream_Stream_metadata_fuzz.rs  flatgeobuf_file_reader_FgbReader_header_fuzz.rs  flatgeobuf_file_reader_FgbReader_open_fuzz.rs  from_utf8.rs  from_utf8_1.rs  from_utf8_2.rs  from_utf8_3.rs  from_utf8_5.rs  from_utf8_6.rs  fuzz_11.rs  fuzz_12.rs  fuzz_13.rs  fuzz_15.rs  fuzz_16.rs  fuzz_17.rs  fuzz_4.rs  fuzz_8.rs
crate_batch_1/fuzz/fuzz_targets_pre/: from_utf8.rs  from_utf8_3.rs  from_utf8_4.rs  fuzz_8.rs
crate_batch_1/fuzz/previous_harness/: Cargo.txt  chrono_checked_add_days.rs  cranelift.rs  cssparser.rs  der.rs  flatgeobuf.rs
crate_batch_1/src/: backup.rs  lib.rs  main.rs
crate_batch_2/: .fuzzomatic_results.json  Cargo.toml  crate_batch_2.cdx.json
crate_batch_2/fuzz/: Cargo.toml
crate_batch_2/fuzz/fuzz_targets/: Arbitrary.rs  Flif_decode_fuzz.rs  Flif_get_raw_pixels_fuzz.rs  auto.rs  benchmark_vec_u8.rs  fancy_regex_Regex_new_fuzz.rs  fontdue_font_from_bytes_fuzz.rs  fontdue_font_rasterize_fuzz.rs  from_utf8.rs  from_utf8_1.rs  from_utf8_2.rs  from_utf8_4.rs  fuzz_10.rs  fuzz_11.rs  fuzz_2.rs  fuzz_5.rs  fuzz_6.rs  geo_algorithm_convex_hull_convex_hull_fuzz.rs  gif_reader_new_fuzz.rs  gif_reader_read_info_fuzz.rs  gif_reader_set_color_output_fuzz.rs  goblin_archive_Index_parse_sysv_index_fuzz.rs  handlebars_registry_new_fuzz.rs  handlebars_registry_render_template_fuzz.rs  human_name_Name_parse_fuzz.rs  image_codecs_jpeg_decoder_JpegDecoder_new_fuzz.rs  image_codecs_webp_decoder_WebPDecoder_new_fuzz.rs  image_image_read_image_fuzz.rs  jpeg_decoder_decoder_new_fuzz.rs  juniper_parser_lexer_Lexer_new_fuzz.rs  serde_hjson_de_from_slice_fuzz.rs  url_Url_parse_fuzz.rs
crate_batch_2/fuzz/fuzz_targets_pre/: from_utf8.rs  from_utf8_1.rs  from_utf8_2.rs  fuzz_2.rs  fuzz_9.rs
crate_batch_2/fuzz/previous_harness/: Cargo.txt  fancy_regex.rs  filf.rs  fontdue.rs  geo.rs  gif.rs  goblin.rs  handlebars.rs  hjson.rs  human_name.rs  hyper.rs  image.rs  image_read_image.rs  juniper.rs
crate_batch_2/src/: backup.rs  lib.rs  main.rs
crate_batch_3/: .fuzzomatic_results.json  Cargo.toml  crate_batch_3.cdx.json
crate_batch_3/fuzz/: Cargo.toml
crate_batch_3/fuzz/fuzz_targets/: Arbitrary.rs  auto.rs  base64_decode_fuzz.rs  benchmark_vec_u8.rs  from_utf8.rs  from_utf8_1.rs  from_utf8_2.rs  from_utf8_3.rs  fuzz_1.rs  fuzz_12.rs  fuzz_13.rs  fuzz_14.rs  fuzz_15.rs  fuzz_3.rs  fuzz_5.rs  fuzz_9.rs  libflate_deflate_decode_Decoder_new_fuzz.rs  lopdf_reader_Document_load_mem_fuzz.rs  lz4_flex_block_compress_compress_prepend_size_fuzz.rs  lz4_flex_block_decompress_decompress_size_prepended_fuzz.rs  lz_fear_framed_decompress_LZ4FrameReader_new_fuzz.rs  minidump_minidump_Minidump_get_stream_fuzz.rs  minidump_minidump_Minidump_read_fuzz.rs  miniz_oxide_deflate_compress_to_vec_fuzz.rs  miniz_oxide_inflate_core_HuffmanTable_new_fuzz.rs  miniz_oxide_inflate_decompress_to_vec_fuzz.rs  mp4ameta_tag_Tag_read_from_fuzz.rs  naga_front_wgsl_parse_fuzz.rs  npy_npy_data_from_bytes_fuzz.rs  ntfs_ntfs_new_fuzz.rs  ntfs_ntfs_read_upcase_table_fuzz.rs
crate_batch_3/fuzz/fuzz_targets_pre/: fuzz_1.rs  fuzz_10.rs  fuzz_2.rs  fuzz_3.rs  fuzz_4.rs
crate_batch_3/fuzz/previous_harness/: Cargo.txt  libflate.rs  lopdf.rs  lz4_flex.rs  lz_fear.rs  minidump_86.rs  miniz_oxide.rs  mp4ameta.rs  naga.rs  nom.rs  npy.rs  ntfs.rs  num_bigint.rs
crate_batch_3/src/: backup.rs  lib.rs  main.rs
crate_batch_4/: .fuzzomatic_results.json  Cargo.toml  crate_batch_4.cdx.json  crate_batch_4.cdx.xml
crate_batch_4/fuzz/: Cargo.toml
crate_batch_4/fuzz/fuzz_targets/: Arbitrary.rs  Arbitrary_1.rs  auto.rs  copy_from_slice.rs  decode_png.rs  from_utf8.rs  from_utf8_2.rs  from_utf8_3.rs  fuzz_2.rs  fuzz_7.rs  fuzz_8.rs  glob_glob_fuzz.rs  pcapng_block_parse_block_fuzz.rs  pdf_file_File_get_page_fuzz.rs  pdf_file_File_num_pages_fuzz.rs  pdf_file_from_data_fuzz.rs  pdf_file_open_fuzz.rs  pdf_parser_lexer_new_fuzz.rs  pdf_parser_parse_xref_fuzz.rs  pgp_packet_signature_de_Signature_from_slice_fuzz.rs  phonenumber_parser_parse_fuzz.rs  plist_value_from_reader_fuzz.rs  png_decoder_Reader_next_frame_fuzz.rs  png_output_info_buffer_size_fuzz.rs  prettytable_add_row_fuzz.rs  prettytable_row_new_fuzz.rs  prettytable_table_print_fuzz.rs  pulldown_cmark_Options_empty_insert_fuzz.rs  pulldown_cmark_html_push_html_fuzz.rs  pulldown_cmark_parse_Parser_new_fuzz.rs  pulldown_cmark_parse_new_ext_fuzz.rs  pulldown_cmark_parse_new_fuzz.rs  quick_xml_reader_from_str_fuzz.rs  quick_xml_reader_read_event_fuzz.rs
crate_batch_4/fuzz/fuzz_targets_pre/: from_utf8_1.rs  fuzz_11.rs  (+2 more)
crate_batch_4/src/: backup.rs  lib.rs  main.rs
crate_batch_5/: .fuzzomatic_results.json  Cargo.toml  crate_batch_5.cdx.json
crate_batch_5/fuzz/: Cargo.toml
crate_batch_5/src/: backup.rs  lib.rs  main.rs
crate_batch_6/: .fuzzomatic_results.json  Cargo.toml  crate_batch_6.cdx.json
crate_batch_6/fuzz/: Cargo.toml
crate_batch_6/src/: backup.rs  lib.rs  main.rs
crate_dependencies/: Cargo.toml
crate_dependencies/src/: main.rs
(+160 files in other folders)
