[package]
name = "crate_batch_1"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"


[dependencies]
alloy-json-abi = { git = "https://github.com/alloy-rs/core", rev = "6540523"}

bcrypt = {git="https://github.com/Keats/rust-bcrypt", rev="f9a87be"}
async-h1 = "2.3.4"
bincode-6 = {package = "bincode", git="https://github.com/bincode-org/bincode", rev="a14ea97"}
bincode-7 ={ package = "bincode", git = "https://github.com/bincode-org/bincode", rev = "4fea079" }
bson-10 = {package = "bson", git="https://github.com/mongodb/bson-rust", rev="aff67d1"}
bson-11 = {package = "bson", git="https://github.com/mongodb/bson-rust",rev="60745f1"}
bson-12 = {package = "bson", git="https://github.com/mongodb/bson-rust",rev="b069ef5"}
# boa_parser = { git = "https://github.com/boa-dev/boa", rev = "55e85ad" }
chrono-16 = {package = "chrono", git="https://github.com/chronotope/chrono",rev="4545f9e"}
chrono-17 = {package = "chrono", git="https://github.com/chronotope/chrono",rev="0f1a635"}
cookie = {git="https://github.com/rwf2/cookie-rs", rev="0de451d", features = ["signed"]}


# for cranelift
cranelift-codegen = {git="https://github.com/bytecodealliance/cranelift", rev="8b722d4"}
cranelift = {git="https://github.com/bytecodealliance/cranelift", rev="8b722d4"}
cranelift_reader = {package = "cranelift-reader", git="https://github.com/bytecodealliance/cranelift", rev="8b722d4"}

csscolorparser = {git="https://github.com/mazznoer/csscolorparser-rs", rev="bca33b5"}
cssparser = "0.34.0"
cursive = "0.21"
der={git="https://github.com/RustCrypto/formats", rev="9827820"}
der-parser={git = "https://github.com/rusticata/der-parser", rev="69739bb"}
exmex = {git="https://github.com/bertiqwerty/exmex", rev="3c29e56"}
fatfs = "0.3.6"
flac = "0.5.0"
flatgeobuf = {git="https://github.com/flatgeobuf/flatgeobuf", rev="25a0456"} 

rand = "0.8"