[package]
name = "crate_dependencies"
version = "0.1.0"
edition = "2021"

[dependencies]
crate_batch_1 = { path = "../crate_batch_1" }
crate_batch_2 = { path = "../crate_batch_2" }
crate_batch_3 = { path = "../crate_batch_3" }
crate_batch_4 = { path = "../crate_batch_4" }
crate_batch_5 = { path = "../crate_batch_5" }
crate_batch_6 = { path = "../crate_batch_6" }