[[bin]]
name = "flac_stream_Stream_metadata_fuzz"
path = "fuzz_targets/flac_stream_Stream_metadata_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "flac_stream_Stream_from_buffer_fuzz"
path = "fuzz_targets/flac_stream_Stream_from_buffer_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "flac_stream_Stream_iter_fuzz"
path = "fuzz_targets/flac_stream_Stream_iter_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "flac_stream_Stream_info_fuzz"
path = "fuzz_targets/flac_stream_Stream_info_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cursive_core_views_dialog_Dialog_title_fuzz"
path = "fuzz_targets/cursive_core_views_dialog_Dialog_title_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cursive_core_views_dialog_Dialog_around_fuzz"
path = "fuzz_targets/cursive_core_views_dialog_Dialog_around_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cursive_core_views_dialog_Dialog_button_fuzz"
path = "fuzz_targets/cursive_core_views_dialog_Dialog_button_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "flatgeobuf_file_reader_FgbReader_open_fuzz"
path = "fuzz_targets/flatgeobuf_file_reader_FgbReader_open_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "flatgeobuf_file_reader_FgbReader_header_fuzz"
path = "fuzz_targets/flatgeobuf_file_reader_FgbReader_header_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bincode_config_Configuration_standard_fuzz"
path = "fuzz_targets/bincode_config_Configuration_standard_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bincode_decode_from_slice_fuzz"
path = "fuzz_targets/bincode_decode_from_slice_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cursive_cursive_default_fuzz"
path = "fuzz_targets/cursive_cursive_default_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cursive_cursive_runnable_run_fuzz"
path = "fuzz_targets/cursive_cursive_runnable_run_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bson_document_from_reader_fuzz"
path = "fuzz_targets/bson_document_from_reader_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bson_decoder_decode_document_fuzz"
path = "fuzz_targets/bson_decoder_decode_document_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fatfs_fs_FsOptions_new_fuzz"
path = "fuzz_targets/fatfs_fs_FsOptions_new_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fatfs_fs_FileSystem_new_fuzz"
path = "fuzz_targets/fatfs_fs_FileSystem_new_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bcrypt_verify_fuzz"
path = "fuzz_targets/bcrypt_verify_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "chrono_datetime_parse_from_rfc2822_fuzz"
path = "fuzz_targets/chrono_datetime_parse_from_rfc2822_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "chrono_offset_utc_now_fuzz"
path = "fuzz_targets/chrono_offset_utc_now_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "chrono_naive_date_days_new_fuzz"
path = "fuzz_targets/chrono_naive_date_days_new_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "chrono_datetime_DateTime_checked_add_days_fuzz"
path = "fuzz_targets/chrono_datetime_DateTime_checked_add_days_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "der_decoder_Decoder_new_fuzz"
path = "fuzz_targets/der_decoder_Decoder_new_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cssparser_parser_next_including_whitespace_and_comments_fuzz"
path = "fuzz_targets/cssparser_parser_next_including_whitespace_and_comments_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "csscolorparser_parser_parse_fuzz"
path = "fuzz_targets/csscolorparser_parser_parse_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "alloy_json_abi_abi_JsonAbi_parse_fuzz"
path = "fuzz_targets/alloy_json_abi_abi_JsonAbi_parse_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "der_parser_der_parse_der_fuzz"
path = "fuzz_targets/der_parser_der_parse_der_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cookie_jar_signed_mut_fuzz"
path = "fuzz_targets/cookie_jar_signed_mut_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cranelift_reader_parser_parse_test_fuzz"
path = "fuzz_targets/cranelift_reader_parser_parse_test_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "exmex_parse_with_default_ops_fuzz"
path = "fuzz_targets/exmex_parse_with_default_ops_fuzz.rs"
test = false
doc = false
bench = false

[package]
name = "crate_batch_1-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
libfuzzer-sys = "0.4"
async-h1 = "2.3.4"
cssparser = "0.34.0"
cursive = "0.21"
fatfs = "0.3.6"
flac = "0.5.0"

[dev-dependencies]

[target]

[package.metadata]
cargo-fuzz = true

[dependencies.arbitrary]
version = "1.0.0"
features = [ "derive",]

[dependencies.alloy-json-abi]
git = "https://github.com/alloy-rs/core"
rev = "6540523"

[dependencies.bcrypt]
git = "https://github.com/Keats/rust-bcrypt"
rev = "f9a87be"

[dependencies.bincode-6]
package = "bincode"
git = "https://github.com/bincode-org/bincode"
rev = "a14ea97"

[dependencies.bincode-7]
package = "bincode"
git = "https://github.com/bincode-org/bincode"
rev = "4fea079"

[dependencies.bson-10]
package = "bson"
git = "https://github.com/mongodb/bson-rust"
rev = "aff67d1"

[dependencies.bson-11]
package = "bson"
git = "https://github.com/mongodb/bson-rust"
rev = "60745f1"

[dependencies.bson-12]
package = "bson"
git = "https://github.com/mongodb/bson-rust"
rev = "b069ef5"

[dependencies.chrono-16]
package = "chrono"
git = "https://github.com/chronotope/chrono"
rev = "4545f9e"

[dependencies.chrono-17]
package = "chrono"
git = "https://github.com/chronotope/chrono"
rev = "0f1a635"

[dependencies.cookie]
git = "https://github.com/rwf2/cookie-rs"
rev = "0de451d"
features = [ "signed",]

[dependencies.cranelift-codegen]
git = "https://github.com/bytecodealliance/cranelift"
rev = "8b722d4"

[dependencies.cranelift]
git = "https://github.com/bytecodealliance/cranelift"
rev = "8b722d4"

[dependencies.cranelift-reader]
git = "https://github.com/bytecodealliance/cranelift"
rev = "8b722d4"

[dependencies.csscolorparser]
git = "https://github.com/mazznoer/csscolorparser-rs"
rev = "bca33b5"

[dependencies.der]
git = "https://github.com/RustCrypto/formats"
rev = "9827820"

[dependencies.der-parser]
git = "https://github.com/rusticata/der-parser"
rev = "69739bb"

[dependencies.exmex]
git = "https://github.com/bertiqwerty/exmex"
rev = "3c29e56"

[dependencies.flatgeobuf]
git = "https://github.com/flatgeobuf/flatgeobuf"
rev = "25a0456"

[dependencies.crate_batch_1]
path = ".."
