[package]
name = "crate_batch_1-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
libfuzzer-sys = "0.4"
async-h1 = "2.3.4"
cssparser = "0.34.0"
cursive = "0.21"
fatfs = "0.3.6"
flac = "0.5.0"
arbitrary = { version = "1", features = ["derive"] }

[workspace]
members = []

[package.metadata]
cargo-fuzz = true

[dependencies.crate_batch_1]
path = ".."

[dependencies.alloy-json-abi]
git = "https://github.com/alloy-rs/core"
rev = "6540523"

[dependencies.bcrypt]
git = "https://github.com/Keats/rust-bcrypt"
rev = "f9a87be"

[dependencies.bincode-6]
package = "bincode"
git = "https://github.com/bincode-org/bincode"
rev = "a14ea97"

[dependencies.bincode-7]
package = "bincode"
git = "https://github.com/bincode-org/bincode"
rev = "4fea079"

[dependencies.bson-10]
package = "bson"
git = "https://github.com/mongodb/bson-rust"
rev = "aff67d1"

[dependencies.bson-11]
package = "bson"
git = "https://github.com/mongodb/bson-rust"
rev = "60745f1"

[dependencies.bson-12]
package = "bson"
git = "https://github.com/mongodb/bson-rust"
rev = "b069ef5"

[dependencies.chrono-16]
package = "chrono"
git = "https://github.com/chronotope/chrono"
rev = "4545f9e"

[dependencies.chrono-17]
package = "chrono"
git = "https://github.com/chronotope/chrono"
rev = "0f1a635"

[dependencies.cookie]
git = "https://github.com/rwf2/cookie-rs"
rev = "0de451d"
features = [ "signed",]

[dependencies.cranelift-codegen]
git = "https://github.com/bytecodealliance/cranelift"
rev = "8b722d4"

[dependencies.cranelift]
git = "https://github.com/bytecodealliance/cranelift"
rev = "8b722d4"

[dependencies.cranelift_reader]
package = "cranelift-reader"
git = "https://github.com/bytecodealliance/cranelift"
rev = "8b722d4"

[dependencies.csscolorparser]
git = "https://github.com/mazznoer/csscolorparser-rs"
rev = "bca33b5"

[dependencies.der]
git = "https://github.com/RustCrypto/formats"
rev = "9827820"

[dependencies.der-parser]
git = "https://github.com/rusticata/der-parser"
rev = "69739bb"

[dependencies.exmex]
git = "https://github.com/bertiqwerty/exmex"
rev = "3c29e56"

[dependencies.flatgeobuf]
git = "https://github.com/flatgeobuf/flatgeobuf"
rev = "25a0456"

[[bin]]
name = "Arbitrary"
path = "fuzz_targets/Arbitrary.rs"
test = false
doc = false


[[bin]]
name = "Arbitrary_1"
path = "fuzz_targets/Arbitrary_1.rs"
test = false
doc = false


