[[bin]]
name = "geo_algorithm_convex_hull_convex_hull_fuzz"
path = "fuzz_targets/geo_algorithm_convex_hull_convex_hull_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fontdue_font_from_bytes_fuzz"
path = "fuzz_targets/fontdue_font_from_bytes_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fontdue_font_rasterize_fuzz"
path = "fuzz_targets/fontdue_font_rasterize_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "image_image_total_bytes_fuzz"
path = "fuzz_targets/image_image_total_bytes_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "image_codecs_jpeg_decoder_JpegDecoder_new_fuzz"
path = "fuzz_targets/image_codecs_jpeg_decoder_JpegDecoder_new_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "image_image_read_image_fuzz"
path = "fuzz_targets/image_image_read_image_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "image_codecs_webp_decoder_WebPDecoder_new_fuzz"
path = "fuzz_targets/image_codecs_webp_decoder_WebPDecoder_new_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "human_name_Name_parse_fuzz"
path = "fuzz_targets/human_name_Name_parse_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "handlebars_registry_new_fuzz"
path = "fuzz_targets/handlebars_registry_new_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "handlebars_registry_render_template_fuzz"
path = "fuzz_targets/handlebars_registry_render_template_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "juniper_parser_lexer_Lexer_new_fuzz"
path = "fuzz_targets/juniper_parser_lexer_Lexer_new_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "goblin_archive_Index_parse_sysv_index_fuzz"
path = "fuzz_targets/goblin_archive_Index_parse_sysv_index_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "url_Url_parse_fuzz"
path = "fuzz_targets/url_Url_parse_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gif_reader_read_info_fuzz"
path = "fuzz_targets/gif_reader_read_info_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gif_reader_set_color_output_fuzz"
path = "fuzz_targets/gif_reader_set_color_output_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gif_reader_new_fuzz"
path = "fuzz_targets/gif_reader_new_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "Flif_decode_fuzz"
path = "fuzz_targets/:Flif_decode_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "Flif_get_raw_pixels_fuzz"
path = "fuzz_targets/Flif_get_raw_pixels_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "serde_hjson_de_from_slice_fuzz"
path = "fuzz_targets/serde_hjson_de_from_slice_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "jpeg_decoder_decoder_new_fuzz"
path = "fuzz_targets/jpeg_decoder_decoder_new_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fancy_regex_Regex_new_fuzz"
path = "fuzz_targets/fancy_regex_Regex_new_fuzz.rs"
test = false
doc = false
bench = false

[package]
name = "crate_batch_2-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
libfuzzer-sys = "0.4"
geo = "0.29.3"
serde = "*"
kalker = "2.1.1"

[dev-dependencies]

[target]

[package.metadata]
cargo-fuzz = true

[dependencies.arbitrary]
version = "1.3"
features = [ "derive",]

[dependencies.flif]
git = "https://github.com/ZoeyR/flif.rs"
rev = "a3e7784"

[dependencies.fontdue]
git = "https://github.com/mooman219/fontdue"
rev = "4772807"

[dependencies.goblin]
git = "https://github.com/m4b/goblin"
rev = "c7cd994"

[dependencies.h2]
git = "https://github.com/hyperium/h2"
rev = "308663e"

[dependencies.handlebars]
package = "handlebars"
git = "https://github.com/sunng87/handlebars-rust"
rev = "880486b"

[dependencies.serde-hjson]
git = "https://github.com/hjson/hjson-rust"
rev = "6b76180"

[dependencies.human_name]
git = "https://github.com/djudd/human-name"
rev = "2bcfc22"

[dependencies.hyper]
git = "https://github.com/hyperium/hyper"
rev = "6eb0753"

[dependencies.image]
git = "https://github.com/image-rs/image"
rev = "63bbe70"

[dependencies.gif]
git = "https://github.com/image-rs/image-gif"
rev = "167bc0f"

[dependencies.jpeg-decoder-63]
package = "jpeg-decoder"
git = "https://github.com/image-rs/jpeg-decoder"
rev = "8a8d331"

[dependencies.jpeg-decoder-64]
package = "jpeg-decoder"
git = "https://github.com/image-rs/jpeg-decoder"
rev = "ee4fc87"

[dependencies.fancy-regex]
git = "https://github.com/fancy-regex/fancy-regex"
rev = "f99e5f6"

[dependencies.jsonschema]
git = "https://github.com/Stranger6667/jsonschema"
rev = "d7b6919"

[dependencies.juniper]
git = "https://github.com/graphql-rust/juniper"
rev = "52aea4d"

[dependencies.just]
package = "just"
git = "https://github.com/casey/just"
rev = "8371ada"

[dependencies.crate_batch_2]
path = ".."
