[[bin]]
name = "libflate"
path = "fuzz_targets/libflate.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lopdf"
path = "fuzz_targets/lopdf.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lz_fear"
path = "fuzz_targets/lz_fear.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lz4_flex"
path = "fuzz_targets/lz4_flex.rs"
test = false
doc = false
bench = false

[[bin]]
name = "minidump_85"
path = "fuzz_targets/minidump_85.rs"
test = false
doc = false
bench = false

[[bin]]
name = "minidump_86"
path = "fuzz_targets/minidump_86.rs"
test = false
doc = false
bench = false

[[bin]]
name = "miniz_oxide"
path = "fuzz_targets/miniz_oxide.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mp4ameta"
path = "fuzz_targets/mp4ameta.rs"
test = false
doc = false
bench = false

[[bin]]
name = "naga"
path = "fuzz_targets/naga.rs"
test = false
doc = false
bench = false

[[bin]]
name = "nom"
path = "fuzz_targets/nom.rs"
test = false
doc = false
bench = false

[[bin]]
name = "npy"
path = "fuzz_targets/npy.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ntfs"
path = "fuzz_targets/ntfs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lz_fear_framed_decompress_LZ4FrameReader_new_fuzz"
path = "fuzz_targets/lz_fear_framed_decompress_LZ4FrameReader_new_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "base64_decode_fuzz"
path = "fuzz_targets/base64_decode_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "minidump_minidump_Minidump_read_fuzz"
path = "fuzz_targets/minidump_minidump_Minidump_read_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "minidump_minidump_Minidump_get_stream_fuzz"
path = "fuzz_targets/minidump_minidump_Minidump_get_stream_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mp4ameta_tag_Tag_read_from_fuzz"
path = "fuzz_targets/mp4ameta_tag_Tag_read_from_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lz4_flex_block_decompress_decompress_size_prepended_fuzz"
path = "fuzz_targets/lz4_flex_block_decompress_decompress_size_prepended_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lz4_flex_block_compress_compress_prepend_size_fuzz"
path = "fuzz_targets/lz4_flex_block_compress_compress_prepend_size_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ntfs_ntfs_new_fuzz"
path = "fuzz_targets/ntfs_ntfs_new_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ntfs_ntfs_read_upcase_table_fuzz"
path = "fuzz_targets/ntfs_ntfs_read_upcase_table_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "libflate_deflate_decode_Decoder_new_fuzz"
path = "fuzz_targets/libflate_deflate_decode_Decoder_new_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "miniz_oxide_inflate_decompress_to_vec_fuzz"
path = "fuzz_targets/miniz_oxide_inflate_decompress_to_vec_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "miniz_oxide_inflate_core_HuffmanTable_new_fuzz"
path = "fuzz_targets/miniz_oxide_inflate_core_HuffmanTable_new_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "miniz_oxide_deflate_compress_to_vec_fuzz"
path = "fuzz_targets/miniz_oxide_deflate_compress_to_vec_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lopdf_reader_Document_load_mem_fuzz"
path = "fuzz_targets/lopdf_reader_Document_load_mem_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "naga_front_wgsl_parse_fuzz"
path = "fuzz_targets/naga_front_wgsl_parse_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "npy_npy_data_from_bytes_fuzz"
path = "fuzz_targets/npy_npy_data_from_bytes_fuzz.rs"
test = false
doc = false
bench = false

[package]
name = "crate_batch_3-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
libfuzzer-sys = "0.4"
mp4ameta = "0.11.0"
ncurses-rs = "0.0.3"
base64 = "0.22.1"

[dev-dependencies]

[target]

[package.metadata]
cargo-fuzz = true

[dependencies.arbitrary]
version = "1.3.0"
features = [ "derive",]

[dependencies.libflate]
git = "https://github.com/sile/libflate"
rev = "7e0e56f"

[dependencies.lopdf]
git = "https://github.com/J-F-Liu/lopdf"
rev = "53090ad"

[dependencies.lz-fear]
git = "https://github.com/main--/rust-lz-fear"
rev = "8cb5d60"

[dependencies.lz4_flex]
git = "https://github.com/PSeitz/lz4_flex"
rev = "8daa6ec"

[dependencies.rust-minidump-85]
package = "minidump"
git = "https://github.com/rust-minidump/rust-minidump"
rev = "f0bdcc9"

[dependencies.rust-minidump-86]
package = "minidump"
git = "https://github.com/rust-minidump/rust-minidump"
rev = "22d7608"

[dependencies.minidump-processor-86]
package = "minidump-processor"
git = "https://github.com/rust-minidump/rust-minidump"
rev = "22d7608"

[dependencies.rust-minidump-93]
package = "minidump"
git = "https://github.com/rust-minidump/rust-minidump"
rev = "83f68a6"

[dependencies.miniz_oxide]
git = "https://github.com/Frommi/miniz_oxide"
rev = "0adc62b"

[dependencies.naga]
git = "https://github.com/gfx-rs/naga"
rev = "1f5008f"

[dependencies.nom]
git = "https://github.com/rust-bakery/nom"
rev = "10f1f66"

[dependencies.npy]
git = "https://github.com/potocpav/npy-rs"
rev = "42ea9dd"

[dependencies.npy_derive]
package = "npy-derive"
git = "https://github.com/potocpav/npy-rs"
rev = "42ea9dd"

[dependencies.ntfs]
git = "https://github.com/ColinFinck/ntfs"
rev = "0783cbd"

[dependencies.crate_batch_3]
path = ".."
