[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[package]
name = "crate_batch_4-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
libfuzzer-sys = "0.4"
pancurses = "0.17"
pcapng = "1.0.0"
glob = "0.3.2"
pgp = "0.15.0"

[workspace]
members = []

[package.metadata]
cargo-fuzz = true

[dependencies.arbitrary]
version = "1"
features = ["derive"]

[dependencies.crate_batch_4]
path = ".."

[dependencies.phonenumber]
git = "https://github.com/whisperfish/rust-phonenumber"
rev = "da5c76c"

[dependencies.pdf-112]
package = "pdf"
git = "https://github.com/pdf-rs/pdf"
rev = "316168c"

[dependencies.pdf-115]
package = "pdf"
git = "https://github.com/pdf-rs/pdf"
rev = "99e70cd"

[dependencies.plist]
git = "https://github.com/ebarnard/rust-plist"
rev = "9ed64da"

[dependencies.png]
git = "https://github.com/image-rs/image-png"
rev = "007c06a"

[dependencies.prettytable]
package = "prettytable-rs"
git = "https://github.com/phsym/prettytable-rs"
rev = "25cfe72"

[dependencies.pulldown-cmark-128]
package = "pulldown-cmark"
git = "https://github.com/pulldown-cmark/pulldown-cmark"
rev = "a4e41df"

[dependencies.pulldown-cmark-131]
package = "pulldown-cmark"
git = "https://github.com/pulldown-cmark/pulldown-cmark"
rev = "fb1fb37"

[dependencies.pulldown-cmark-133]
package = "pulldown-cmark"
git = "https://github.com/pulldown-cmark/pulldown-cmark"
rev = "fba26ff"

[dependencies.quick-xml]
git = "https://github.com/tafia/quick-xml"
rev = "0fd7fbb"

[[bin]]
name = "fuzz_2"
path = "fuzz_targets/fuzz_2.rs"
test = false
doc = false


[[bin]]
name = "from_utf8"
path = "fuzz_targets/from_utf8.rs"
test = false
doc = false


[[bin]]
name = "fuzz_6"
path = "fuzz_targets/fuzz_6.rs"
test = false
doc = false


[[bin]]
name = "fuzz_7"
path = "fuzz_targets/fuzz_7.rs"
test = false
doc = false


[[bin]]
name = "fuzz_8"
path = "fuzz_targets/fuzz_8.rs"
test = false
doc = false


[[bin]]
name = "from_utf8_1"
path = "fuzz_targets/from_utf8_1.rs"
test = false
doc = false


[[bin]]
name = "from_utf8_2"
path = "fuzz_targets/from_utf8_2.rs"
test = false
doc = false


[[bin]]
name = "fuzz_11"
path = "fuzz_targets/fuzz_11.rs"
test = false
doc = false


[[bin]]
name = "from_utf8_3"
path = "fuzz_targets/from_utf8_3.rs"
test = false
doc = false


[[bin]]
name = "from_utf8_4"
path = "fuzz_targets/from_utf8_4.rs"
test = false
doc = false

